Update README.md
Add deprecated features